
syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "idss/graphdb";

message QueryManager{
    string uqid = 1; // Unique Query ID, generated by the client
    string query = 2; // Query in eliasdb
    int64 ttl = 3; // Time to live in seconds
    google.protobuf.Timestamp arrived_at = 4; // Timestamp when the query arrived
    string sender_id = 5; // Client ID
    bool local_execution = 6; // 0 = false, 1 = true
    bool completed = 7; // 0 = false, 1 = true
    bool sent_back = 8; // 0 = false, 1 = true
    bool failed = 9; // 0 = false, 1 = true
}

/* 
COMPILATION COMMAND
protoc --proto_path=. --go_out=. --go_opt=paths=source_relative idssschema.proto
*/